<resources>
    <string name="app_name">Shuttler</string>
    <string name="title_activity_tracker">Map</string>
    <string name="miss_shuttle">Don\'t Miss The Shuttle Anymore!</string>
    <string name="login_content_description">Shuttler icon</string>
    <string name="hint_username">Username</string>
    <string name="hint_username_email">Plattsburgh Username / Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="btn_to_register">First time using Shuttler? <font color="#F2014B">Register here</font></string>

    <string name="maps_menu_settings">Settings</string>
    <string-array name="locations_array">
        <item>Walmart</item>
        <item>Target</item>
        <item>Market32</item>
        <item>Pharmacy</item>
        <item>Campus</item>
    </string-array>
    <string name="authenticate">Confirmation email</string>
    <string name="done">Done</string>
    <string name="logout_button_text_settings">Logout</string>
    <string name="apply_button_settings">APPLY</string>
    <string name="cancel_button_settings">Cancel</string>
    <string name="on_duty_string">Dear driver, please turn on if you are on duty. Don\'t forget to turn off once you are out of duty </string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="btn_to_login">Already registered? <font color="#F2014B">Sign-in here</font></string>
    <string name="off_hours"><font color="#F2014B">OOPS!</font> The shuttle is not working right now. The Working hours are Sunday to Thursday from 11 am to 10 pm and Friday and Saturday from 10am to 12pm</string>
    <string name="title_activity_driver">Map</string>


</resources>
